--- a/src/components/Record/Record.scss
+++ b/src/components/Record/Record.scss
@@ -115,7 +115,6 @@
     position: relative;
     bottom: 0;
     align-items: center;
-    margin-left: 13px;
   }
 }
 
