--- a/src/components/RecordField/RecordField.scss
+++ b/src/components/RecordField/RecordField.scss
@@ -2,11 +2,17 @@
 
 .pf-record-field {
   display: flex;
+  flex-direction: column;
   flex-wrap: wrap;
   margin-top: 18px;
+  width: 100%;
+}
+
+.pf-record-field__row {
+  display: flex;
+  flex-wrap: wrap;
   align-items: center;
-  width: 700px;
-  margin: 0 auto;
+  width: 100%;
 }
 
 .pf-record-field__small-select {
@@ -14,5 +20,6 @@
 }
 
 .small {
-  flex: 0.5 0 100px !important;
+  flex: 0 0 auto !important;
+  width: 90px;
 }
